Basic working slides

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <header>
   <link rel="stylesheet" href="{{ 'assets/reveal/reveal.css' | url }}" />
-  <link rel="stylesheet" href="{{ 'assets/reveal/theme/black.css' | url }}" />
+  <link rel="stylesheet" href="{{ 'assets/reveal/theme/dracula.css' | url }}" />
 </header>
 <title>Page title</title>
 
@@ -14,6 +14,7 @@
         "slides/02.1-nested.html" %}
       </section>
       {% include "slides/03-promote.html" %}
+      {% include "slides/iframe-mode.njk" %}
     </div>
   </div>
 
